--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
         
         <img src="death.png" alt="MyApp Icon" class="app-icon"> <h1>Uroflowmetry</h1><br><br>
         
-        <a href="https://github.com/step-to-the-future/Release/releases/tag/v1.0/h.zip" class="download-btn" download>
+        <a href="https://github.com/step-to-the-future/Release/releases/tag/v1.0" class="download-btn" download>
             Download
         </a>
     </div>
 </body>
 </html>
+
