--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
         
         <img src="death.png" alt="MyApp Icon" class="app-icon"> <h1>Uroflowmetry</h1><br><br>
         
-        <a href="https://github.com/step-to-the-future/Release/releases/tag/v1.0/Uroflowmetry_1" class="download-btn" download>
+        <a href="https://github.com/step-to-the-future/Release/releases/download/v1.0/h.zip" class="download-btn" download>
             Download
         </a>
     </div>
 </body>
 </html>
+
 
 
