--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Скачать приложение</title>
+    <title>Uroflowmetry</title>
+    <link rel="icon" type="image/png" href="death.png" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -62,6 +63,7 @@
     </div>
 </body>
 </html>
+
 
 
 
