--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         .download-btn:hover {
             background-color: #45a049;
         }
+        .descr{
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -60,9 +63,11 @@
         <a href="https://github.com/step-to-the-future/Release/releases/download/v1.0/h.zip" class="download-btn" download>
             Download
         </a>
+       <p class="descr">После загрузки распакуйте ZIP-файл в любое место у себя на компьютере.Там появятся два файла, первое .exe файл(приложение) и текстовый файл, из которого приложение будет считывать изменение объёма с интервалом 0,125мс</p> 
     </div>
 </body>
 </html>
+
 
 
 
