--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             background-color: #45a049;
         }
         .descr{
-            color: white;
+            color: black;
         }
     </style>
 </head>
@@ -67,6 +67,7 @@
     </div>
 </body>
 </html>
+
 
 
 
